Horizontal Scroll Home Screen Fixed.

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -51,6 +51,10 @@ p {
 
 /*Home Container*/
 
+.homeContainer {
+    overflow: hidden;
+}
+
 .bannerBigTop {
     height:515px;
     width: 1028px;
